Remove dozer mapper. Remove unused controllers.